src/test/ui/chalkify/closure.stderr
error[E0382]: borrow of moved value: `b`
  --> $DIR/closure.rs:28:5
   |
LL |     let mut c = b;
   |                 - value moved here
...
LL |     b();
   |     ^ value borrowed here after move
   |
note: closure cannot be moved more than once as it is not `Copy` due to moving the variable `a` out of its environment
  --> $DIR/closure.rs:21:9
   |
LL |         a = 1;
   |         ^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0382`.
